unpackaged/main/default/objects/Secure_Object__c/Secure_Object__c.object-meta.xml
<CustomObject>
    <label>Secure Object</label>
    <nameField>
        <label>Secure Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secure Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>