unpackaged/main/default/objects/Secure_Object__c/fields/Notify__c.field-meta.xml
<CustomField>
    <fullName>Notify__c</fullName>
    <defaultValue>{{ADMIN_EMAIL}}</defaultValue>
    <label>Notify</label>
    <type>Email</type>
</CustomField>