unpackaged/main/default/objects/Secure_Object__c/fields/Policy_Owner__c.field-meta.xml
<CustomField>
    <fullName>Policy_Owner__c</fullName>
    <label>Policy Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>{{POLICY_OWNER_1}}</fullName>
            </value>
            <value>
                <fullName>{{POLICY_OWNER_2}}</fullName>
            </value>
            <value>
                <fullName>{{POLICY_OWNER_3}}</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>